feat: implement PWA capabilities and auto-save for forms
PWA Features:
- Create manifest.json with app metadata
  - App name, icons, display modes, theme colors
  - Share target integration
  - Shortcuts for quick access (Pessoas, Usuários)
  - Screenshots for app stores

- Create service-worker.ts with offline support
  - Network-first strategy for API requests with cache fallback
  - Cache-first strategy for static assets
  - Push notification handling with notification click events
  - Background sync for pending changes
  - Periodic background sync for data updates
  - Error responses for offline scenarios

- Create PwaService for app integration
  - Service Worker registration and management
  - Online/offline status detection with Observable
  - Update availability checking
  - Install prompt handling
  - Push notification subscription
  - Background sync registration
  - Cache management and statistics
  - App installation tracking

Auto-Save Features:
- Create AutoSaveService for form auto-saving
  - Debounced saves to prevent excessive API calls (configurable)
  - Draft recovery from LocalStorage
  - Save status tracking with Observable
  - Error handling and recovery
  - Unsaved changes detection
  - Draft management (save, recover, clear)
  - Storage statistics and cleanup
  - Support for any FormGroup

Frontend Integration:
- Update index.html with PWA meta tags
  - manifest.json reference
  - Apple mobile web app support
  - Theme color and icons
  - Viewport fit for notches

- Add FRONTEND_ARCHITECTURE.md
  - Complete overview of frontend architecture
  - Service layer patterns
  - State management (NgRx) documentation
  - Component patterns
  - Error handling and interceptors
  - Performance optimizations
  - Build information

Example Usage:
// PWA Service
constructor(private pwaService: PwaService) {
  this.pwaService.getOnlineStatus.subscribe(isOnline => {
    console.log('Online:', isOnline);
  });
}

// Auto-Save Service
constructor(private autoS

--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,15 @@
   <meta charset="utf-8">
   <title>SIPAS - Sistema de Integração de Permissões e Auditoria de Segurança</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+  <meta name="description" content="Sistema Integrado de Proteção e Acompanhamento Social - Plataforma para gerenciamento de dados sociais">
+  <meta name="theme-color" content="#2563eb">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="SIPAS">
+  <link rel="apple-touch-icon" href="icons/icon-192x192.png">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="manifest" href="manifest.json">
 </head>
 <body>
   <app-root></app-root>
